--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    ],
    "source": [
     "#Append at the beginning\n",
-    "east_african_countries.insert(0,'Djibouti')\n",
+    "east_african_countries.insert(0, Djibouti)\n",
     "east_african_countries"
    ]
   },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -266,13 +266,151 @@
        "<function list.pop(index=-1, /)>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "east_african_countries.pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Uganda'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Use indexing to access elements\n",
+    "Fourth_country = east_african_countries[3] \n",
+    "Fourth_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Somalia', 'Djibouti', 'Kenya', 'Uganda', 'Tanzania', 'Burundi', 'Rwanda']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Modifying elements: Lists are mutable, so you can change elements\n",
+    "east_african_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Somalia', 'Djibouti', 'Kenya', 'Uganda', 'Tanzania', 'Burundi', 'Rwanda']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "east_african_countries[0]= 'Somalia'\n",
+    "east_african_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Somalia', 'Djibouti', 'Kenya', 'Uganda']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "east_african_countries.pop()\n",
+    "east_african_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Apppend : Use append to add items\n",
+    "east_african_countries.append('Burundi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kenya', 'Uganda', 'Burundi']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Remove: Use .remove() to delete an item.\n",
+    "east_african_countries.remove('Somalia')\n",
+    "east_african_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Use len()to get the number of items in a list\n",
+    "len (east_african_countries)"
    ]
   },
   {
